# QualCoder-v2

./: .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .mcp.json  .pre-commit-config.yaml  404.html  AI_CONTRIBUTION_NOTICE.md  CLAUDE.md  Makefile  README.md  conftest.py  docker-compose.yml  index.html  mkdocs.yml  opencode.json  opencode.jsonc  package-lock.json  package.json  plan.md  pyproject.toml  requirements.txt  sitemap.xml
.claude/agents/: ai-assistant-context-agent.md  analysis-context-agent.md  cases-context-agent.md  coding-context-agent.md  controller-agent.md  design-system-agent.md  domain-agent.md  infrastructure-agent.md  journals-context-agent.md  molecule-agent.md  organism-agent.md  page-agent.md  projects-context-agent.md  repository-agent.md  screen-agent.md  signal-bridge-agent.md  viewmodel-agent.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  docs.yml
ARCHITECTURE/: index.html
DOC_COVERAGE/: index.html
ai/: index.html  session-architecture-plan.md
ai/DDD_WORKSHOP_ALIGNMENT_PLAN/: index.html
ai/DDD_WORKSHOP_REFACTOR_PLAN/: index.html
ai/QC-048_VERSION_CONTROL_IMPLEMENTATION_PLAN/: index.html
ai/REFACTORING_PLAN/: index.html
ai/REFACTOR_COORDINATOR_TO_APPCONTEXT/: index.html
ai/SYNC_ENGINE_REFACTOR_PLAN/: index.html
ai/UUIDV7_MIGRATION_PLAN/: index.html
allure/: index.html
allure/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
allure/export/: influxDbData.txt  prometheusData.txt
allure/history/: duration-trend.json  history-trend.json  history.json  retry-trend.json
allure/widgets/: behaviors.json  categories-trend.json  duration-trend.json  duration.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
api/: index.html
api/components/: index.html
api/getting-started/: index.html
api/mcp-api/: index.html
api/patterns/: index.html
api/reference/: index.html
api/storage-tools/: index.html
api/tokens/: index.html
archive/: index.html
archive/LOCALIZATION_ANALYSIS/: index.html
archive/SCREEN_STORIES_PLAN/: index.html
backlog/: BACKLOG_RESTRUCTURE.md  DEPENDENCY_ANALYSIS.md  config.yml  index.html  index.md
backlog/BACKLOG_RESTRUCTURE/: index.html
backlog/DEPENDENCY_ANALYSIS/: index.html
backlog/decisions/: decision-001 design-system-visualization-libraries.md  decision-002 library-alternatives-analysis.md  decision-003 localization-framework.md  decision-004 design-system-visualization-libraries.md  decision-005 mcp-transport-http-over-stdio.md  decision-006 rapidfuzz-duplicate-detection.md  decision-006 sqlite-version-control-sqlite-diffable.md  doc-001 design-system-visualization-libraries.md
backlog/docs/: doc-001 design-system-api.md  doc-002 architecture.md
backlog/milestones/: m-001 - Foundation.md  m-002 - Coding-Context.md  m-003 - Source-Management.md  m-004 - Case-Management.md  m-005 - Analysis.md  m-006 - Agent-Context.md  m-007 - Collaboration.md
backlog/tasks/: index.html  index.md  qc-001 - Shared-Domain-Types.md  qc-002 - Design-System.md  qc-002.01 - Visualization-Components.md  qc-003 - Application-Shell.md  qc-003.01 - Base-Signal-Bridge.md  qc-003.02 - Event-Bus.md  qc-003.04 - Project-Migration.md  qc-004 - Coding-Domain.md  qc-004.02 - Image-and-AV-Segment-Events.md  qc-004.03 - Segment-Importance-Event.md  qc-005 - Coding-Infrastructure.md  qc-005.01 - Segment-Query-Methods.md  qc-005.02 - Code-Query-Methods.md  qc-005.03 - Batch-Operations.md  qc-005.04 - Code-Usage-Tracking.md  qc-006 - Coding-Application.md  qc-006.01 - Auto-Coding-Commands.md  qc-006.01 - Coding-Controller-Core.md  qc-006.03 - Auto-Coding-Commands.md  qc-006.03 - Navigation-Queries.md  qc-006.04 - Navigation-Queries.md  qc-006.04 - Signal-Bridge.md  qc-006.05 - Coding-Signal-Bridge.md  qc-006.05 - Recent-Codes-Service.md  qc-006.06 - New-Agent-Tool-Schemas.md  (+275 more)
convex/: cases.ts  categories.ts  codes.ts  folders.ts  schema.ts  segments.ts  settings.ts  sources.ts  tsconfig.json
decisions/: index.html
design_system/: __init__.py  __main__.py  calendar.py  capture_storybook_screenshots.py  charts.py  chat.py  code_tree.py  components.py  context_menu.py  data_display.py  date_picker.py  document.py  editors.py  filters.py  forms.py  icons.py  image_annotation.py  layout.py  lists.py  media.py  modal.py  navigation.py  network_graph.py  pagination.py  pdf_viewer.py  pickers.py  progress_bar.py  pyproject.toml  qt_compat.py  run_storybook.py  spinner.py  stat_card.py  stylesheet.py  theme.py  toast.py  toggle.py  tokens.py  upload.py  word_cloud.py
design_system/storybook/: __init__.py  app.py  page.py  sidebar.py
design_system/storybook/stories/: __init__.py  chat.py  core.py  data.py  editors.py  feedback.py  forms.py  media.py  navigation.py  overlays.py  visualization.py
design_system/tests/: __init__.py  conftest.py  test_components.py  test_data_display.py  test_document.py  test_feedback.py  test_forms.py  test_icons.py  test_lists.py  test_media.py  test_navigation.py  test_pagination.py  test_screenshots.py  test_visualization.py
docs/: AI4C_PROJECT_PROPOSALS.md  AI4C_PROJECT_REVIEW.md  ARCHITECTURE.md  CODE_REVIEW_claude-init-and-analysis-28.md  DESIGN_SYSTEM_UPDATE_PLAN.md  DOC_COVERAGE.md  REFACTORING_PLAN.md  UX_TECH_DEBT.md  backlog  design-system-api.md  index.md
mockups/: ai_chat.html  ai_search.html  code_av.html  code_image.html  code_pdf.html  code_text.html  components.html  graph_view.html  index.html  manage_attributes.html  manage_cases.html  manage_journals.html  phase1_file_manager.html  phase1_material_design.html  reports_charts.html  reports_coding.html  reports_comparison.html  review_queue.html  settings.html  sql_query.html  text_mining.html
scripts/: aggregate_firebase.py  aggregate_firebase.sql  capture_ui_screenshots.py  dvc_pipeline_template.yaml
search/: search_index.json
src/: __init__.py  main.py
test-reports/: index.html
tutorials/: index.html
user-manual/: index.html
(+29479 files in other folders)
