[project]
name = "qualcoder-v2"
version = "0.2.0"
description = "QualCoder v2 - Qualitative Data Analysis"
requires-python = ">=3.11"
dependencies = [
    "design-system",
    # Qt binding (PySide6 preferred - LGPL license)
    "pyside6>=6.5.0",
]

[tool.uv.workspace]
members = ["design_system", "_template"]

[tool.uv.sources]
design-system = { workspace = true }

[project.optional-dependencies]
ddd = [
    "returns>=0.22",  # Result/Maybe/IO monads
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.5.0",
    "pre-commit>=4.0.0",
    "ruff>=0.9.0",
    "returns>=0.22",  # Result monad for domain layer
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
]

# ============================================================================
# Ruff Configuration
# ============================================================================
[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "design_system"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["design_system", "src"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports ok for re-exports
"**/tests/**" = ["ARG002"]  # pytest fixtures like qapp are used implicitly
