[project]
name = "qualcoder-v2"
version = "0.2.0"
description = "QualCoder v2 - Qualitative Data Analysis"
requires-python = ">=3.11"
dependencies = [
    "design-system",
    # Qt binding (PySide6 preferred - LGPL license)
    "pyside6>=6.5.0",
    # Database
    "sqlalchemy>=2.0",
    # Convex cloud database client
    "convex>=0.7.0",
    "python-dotenv>=1.0.0",
    # Image processing (MIT-CMU license)
    "pillow>=10.0",
    # HEIC/HEIF image support (Apache-2.0 license)
    "pillow-heif>=0.18.0",
    # Media playback (LGPL-2.1 - VLC bindings)
    "python-vlc>=3.0",
    "allure-pytest>=2.15.3",
    "mutagen>=1.47.0",
    # PDF text extraction (BSD license)
    "pypdf>=4.0",
    # Word document extraction (MIT license)
    "python-docx>=1.0",
    # OpenDocument extraction (Apache-2.0 license)
    "odfpy>=1.4",
    # MCP server HTTP transport (MIT license)
    "aiohttp>=3.9",
    # VCS: SQLite-to-diffable-JSON for git-friendly snapshots (Apache-2.0)
    "sqlite-diffable>=0.4.0",
    # Fuzzy string matching for duplicate detection (MIT license)
    "rapidfuzz>=3.0",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "opentelemetry-instrumentation-sqlalchemy>=0.60b1",
    "uuid-utils>=0.14.1",
    "qasync>=0.28.0",
]

[tool.uv.workspace]
members = ["design_system", "_template"]

[tool.uv.sources]
design-system = { workspace = true }

[project.optional-dependencies]
ddd = [
    "returns>=0.22",  # Result/Maybe/IO monads
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.5.0",
    "pytest-xdist[psutil]>=3.0",
    "pre-commit>=4.0.0",
    "ruff>=0.9.0",
    "returns>=0.22",  # Result monad for domain layer
    "pytest-cov>=7.0.0",
    "httpx>=0.28.1",
    "boto3>=1.35.0",
    "dvc[s3]>=3.50.0",
    "moto[s3]>=5.0.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
]

# ============================================================================
# Ruff Configuration
# ============================================================================
[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "design_system"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["design_system", "src"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports ok for re-exports
"**/tests/**" = ["ARG001", "ARG002", "E402"]  # pytest fixtures; pytestmark before imports
"**/commandHandlers/**" = ["ARG001"]  # session param is part of handler protocol
"src/tests/exploratory_*.py" = ["E402", "ARG005"]  # script-style exploratory tests with inline imports

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["src", "design_system/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-n",
    "auto",
]
markers = [
    "unit: fast isolated tests with no external dependencies",
    "integration: tests involving database or component integration",
    "e2e: end-to-end workflow tests",
    "slow: tests taking more than 1 second",
    "screenshot: tests that capture visual screenshots",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
