[project]
name = "design-system"
version = "0.2.0"
description = "PySide6 Design System - Material Design components for QualCoder"
requires-python = ">=3.11"
dependencies = [
    # Qt binding (PySide6 preferred - LGPL license)
    "pyside6>=6.5.0",
    # Icons
    "qtawesome>=1.3.0",
    # Visualization libraries (ADR-001)
    "pyqtgraph>=0.13",
    "networkx>=3.0",
    "wordcloud>=1.9",
    "numpy>=1.24",
    "matplotlib>=3.8",
    "pymupdf>=1.24",  # PDF rendering
]

[project.scripts]
storybook = "design_system.storybook:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = [".."]
include = ["design_system*"]
